tsoa working for other entities and organized readme
